Fix flickering effect on animation in Firefox

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -45,8 +45,21 @@ body {
     transition-property: color, background;
     transition-duration: var(--transition);
 
+
+    /* Fix flickering effect on animation in Firefox */
+
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-tap-highlight-color: transparent;
+
+   -webkit-backface-visibility: hidden;
+   -moz-backface-visibility: hidden;
+
+   backface-visibility: hidden;
+
+   -webkit-perspective: 1000;
+   -moz-perspective: 1000;
+   perspective: 1000;
+   /* Other transform properties here */
 }
 
 .block {
